--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,4 +32,58 @@
     --normal-font-size: .938rem;
     --small-font-size: .813rem;
     --smaller-font-size: .75rem;
+
+    /*================ Font Weight ================*/
+    --font-medium: 500;
+    --font-semi-bold: 600;
+
+    /*================ Margenes Bottom ================*/
+    /* .25rem = 4px, .5rem = 8px, .75rem = 12px ... */
+    --md-0-25: .25rem;
+    --md-0-5: .5rem;
+    --md-0-75: .75rem;
+    --md-1: 1rem;
+    --md-1-5: 1.5rem;
+    --md-2: 2rem;
+    --md-2-5: 2.5rem;
+    --md-3: 3rem;
+
+    /*================ z index ================*/
+    --z-tooltip: 10;
+    --z-fixed: 100;
+    --z-modal: 1000;
 }
+
+/*================ Font size for large devices ================*/
+@media screen and (min-width: 968px) {
+    :roont {
+        --big-font-size: 3rem;
+        --h1-font-size: 2.25rem;
+        --h2-font-size: 1.5rem;
+        --h3-font-size: 1.25rem;
+        --normal-font-size: 1rem;
+        --small-font-size: .875rem;
+        --smaller-font-size: .813rem;
+    }
+}
+
+/*================ Variables Dark Theme ================*/
+
+
+/*================ Button Dark/Light ================*/
+
+
+/*================ BASE ================*/
+
+
+/*================ REUSABLE CSS CLASSES ================*/
+
+
+/*================ LAYOUT ================*/
+
+
+/*================ NAV ================*/
+
+
+/* show menu */
+/* Active link */
