--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,7 +184,19 @@ span.my-name {
     border-radius: 2px;
 }
 
+/* Landing Page Buttons */
+.landingPage-btns {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 0 10px;
+}
 
+.btn-items {
+    
+    margin: 5px;
+}
 
 
 
