--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,14 +6,22 @@
 html {
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    width: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
     background-color: #edede9;
+    width: 100%;
 }
 
 header {
     background-color: #6d6875;
+    display: inline-block;
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 /* ========== NAVIGATION BAR ========== */
@@ -21,6 +29,12 @@ header {
 div.container {
     display: flex;
     align-items: center;
+    position: fixed;
+    background-color: #6d6875;
+    width: 100%;
+    top: 0px;
+    left: 0px;
+    z-index: 1;
 }
 
 .navContainer {
@@ -75,6 +89,7 @@ div.container {
     list-style: none;
     margin: 0;
     padding: 0;
+    letter-spacing: 1px;
 }
 
 .navBar-listItem {    /* For the font properties of nav list items */
@@ -83,11 +98,7 @@ div.container {
 }
 
 /* Contact Me Button */ 
-.contact {
-    margin: 10px;
-}
-
-span.contactMe {
+button.contactMe {
     display: flex;
     align-items: center;
     height: 100%;
@@ -98,9 +109,11 @@ span.contactMe {
     border-radius: 16px;
     position: relative;
     left: 150px;
+    border: none;
+    letter-spacing: 1px;
 }
 
-span.contactMe:hover { 
+button.contactMe:hover { 
     cursor: pointer;
     color: #6d6875;
     border: 1px solid hsla(0,0%,100%,0.2);
@@ -140,27 +153,60 @@ input {
     width: 100%;
 }
 
-/* ========== Landing Page ========== */
-/* Introduction */
-.introduction {
-    position: relative;
-    left: 30px;
+input::placeholder {
+    letter-spacing: 1px;
 }
+
+/* ========== Landing Page ========== */
 .landingPage {
     display: flex;
     justify-content: space-around;
     align-items: center;
     color: #6d6875;
-}
-
-.shadowName {
-    color: #e5989b;
-    font-size: 100px;
+    width: 100%;
+    height: 100vh;
 }
 
 main {
+    width: 100%;
     margin: 0px 30px;
+    display: inline-block;
     /* border: 1px solid #b5838d; */
+}
+
+/* Introduction */
+.introduction {
+    display: inline-block;
+    position: relative;
+    left: 50px;
+    top: 60px;
+}
+
+.item-intro-name {
+    position: relative;
+    top: -15px;
+    margin: 10px 0px 0px 10px;
+}
+
+.item-intro-position {
+    position: relative;
+    top: -8px;
+    margin: 0px 10px 10px 10px;
+}
+
+.item-intro-about {
+    margin: 10px;
+}
+
+.shadowName {
+    margin: 5px;
+    color: rgba(229, 152, 155, 0.8);
+    font-size: 100px;
+    position: absolute;
+    left: -100px;
+    top: -78px;
+    font-family: 'Roboto', sans-serif;
+    z-index: -1;
 }
 
 span.my-name {
@@ -169,8 +215,11 @@ span.my-name {
 
 /* Side Bar */
 .side-bar {
+    display: inline-block;
+    align-items: center;
     position: relative;
-    left: 10px;
+    top: 85px;
+    left: 20px;
 }
 .socmed-logo {
     width: 30px;
@@ -191,11 +240,27 @@ span.my-name {
     width: 100%;
     height: 100%;
     padding: 0 10px;
+    margin: 10px 0px;
 }
 
 .btn-items {
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    font-family: 'Poppins', sans-serif;
     margin: 5px;
+    background-color: #6d6875;
+    color: #edede9;
+    padding: 8px;
+    border-radius: 15px;
+    width: 130px;
+    height: 40px;
+    border: none;
+    letter-spacing: 2px;
+    font-weight: 600;
+    text-transform: uppercase;
+    
 }
 
 
